# learn-langgraph

./: main.py  pyproject.toml
parallel_workflow/: 1_cricket_workflow.py  2_upsc_workflow.py
sequential_workfow/: 1_bmi_workflow.py  2_llm_workflow.py  3_prompt_chaining.py
