[project]
name = "learn-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.13.0",
    "langchain>=1.2.17",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
]
